overflow-x fix

--- a/styles/grid.less
+++ b/styles/grid.less
@@ -10,6 +10,7 @@
 
 body {
 	width: 100%;
+	overflow-x: hidden;
 
 
 
