--- a/styles/pages/submissions.less
+++ b/styles/pages/submissions.less
@@ -7,3 +7,41 @@
 /**********************************************************************/
 /* @brief styles for the footer object ********************************/
 /**********************************************************************/
+
+.page_about {
+	grid-column-start: 1;
+	grid-column-end: @DAIgrid_columns + 1;
+
+	display: grid;
+	grid-template-columns: repeat(@DAIgrid_columns, 100% / @DAIgrid_columns);
+	grid-auto-rows: minmax(min-content, max-content);
+
+	.cmp_breadcrumbs {
+		grid-column-start: 2;
+		grid-column-end: @DAIgrid_columns;
+		margin-top: @DAIspacing_quadruple;
+		display: inline;
+
+		ol {
+			display: inline-block;
+
+			li {
+				display: inline-block;
+			}
+		}
+	}
+
+	h1 {
+		grid-column-start: 3;
+		grid-column-end: @DAIgrid_columns - 1;
+		margin-bottom: @DAIspacing_quadruple;
+	}
+
+	p {
+		grid-column-start: 3;
+		grid-column-end: @DAIgrid_columns - 1;
+
+		margin-bottom: @DAIspacing_quadruple;
+	}
+
+}
